<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="307dp"
        android:layout_height="73dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question2"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="312dp"
        android:layout_height="83dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question_"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/answerGroup1"
        android:layout_width="299dp"
        android:layout_height="235dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" >

        <RadioButton
            android:id="@+id/an1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a1" />

        <RadioButton
            android:id="@+id/an2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a2" />

        <RadioButton
            android:id="@+id/an3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a3" />

        <RadioButton
            android:id="@+id/an4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a4" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>