<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question4">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="302dp"
        android:layout_height="73dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question4"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="322dp"
        android:layout_height="127dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question_2"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.016" />

    <RadioGroup
        android:id="@+id/answerGroup3"
        android:layout_width="304dp"
        android:layout_height="198dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" >

        <RadioButton
            android:id="@+id/anss1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ans1" />

        <RadioButton
            android:id="@+id/anss2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ans2" />

        <RadioButton
            android:id="@+id/anss3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ans3" />

        <RadioButton
            android:id="@+id/anss4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ans4" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>