<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question5">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="313dp"
        android:layout_height="91dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question5"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="304dp"
        android:layout_height="90dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question_3"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/answerGroup4"
        android:layout_width="301dp"
        android:layout_height="262dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/ansss1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ansss1" />

        <RadioButton
            android:id="@+id/ansss2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ansss2" />

        <RadioButton
            android:id="@+id/ansss3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ansss3" />

        <RadioButton
            android:id="@+id/ansss4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ansss4" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>