<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question3">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="303dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question3"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="315dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question_1"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/answerGroup2"
        android:layout_width="308dp"
        android:layout_height="211dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" >

        <RadioButton
            android:id="@+id/ans1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/an1" />

        <RadioButton
            android:id="@+id/ans2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/an2" />

        <RadioButton
            android:id="@+id/ans3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/an3" />

        <RadioButton
            android:id="@+id/ans4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/an4" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>